:octocat: import changes from https://github.com/mateuszanella/php-ext-xz @v1.2.0

--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,10 @@
 			"homepage": "https://github.com/codemasher"
 		},
 		{
+			"name": "mateuszanella",
+			"homepage": "https://github.com/mateuszanella/php-ext-xz"
+		},
+		{
 			"name": "Contributors",
 			"homepage":"https://github.com/codemasher/php-ext-xz/graphs/contributors"
 		}
